# spinearn.in

./: .gitignore  DEPLOYMENT_AND_EXTENSION_MARKETPLACE.md  GO_TO_MARKET_AND_PUBLIC_LAUNCH_PLAN.md  LICENSE  PROJECT_ARCHITECTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml  spinearn-reference.html
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_payout_unique_pending.py  003_github_auth.py  004_referral_system.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/middleware/: logging.py  rate_limit.py
backend/app/models/: __init__.py  advertiser.py  campaign.py  click.py  developer.py  impression.py  payout.py
backend/app/routers/: ads.py  advertisers.py  auth.py  config.py  developers.py  metrics.py  payouts.py  public_stats.py  razorpay_router.py  webhooks.py
backend/app/schemas/: __init__.py  advertiser.py  campaign.py  click.py  developer.py  impression.py  payout.py  razorpay_schemas.py
backend/app/services/: __init__.py  auction.py  github_auth.py  google_auth.py  impression.py  ledger.py  razorpay_service.py  wise_service.py
backend/app/tasks/: celery_app.py  impression_tasks.py  payout_tasks.py
backend/app/utils/: country.py
backend/tests/: conftest.py  test_ads.py  test_auction.py  test_impressions.py  test_payouts.py
extension/: esbuild.config.js  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
extension/src/activation/: adRotation.ts  selfUpdate.ts  statusBar.ts
extension/src/adapters/: claudeCode.ts  cli.ts  codex.ts
extension/src/api/: client.ts
extension/src/auth/: googleAuth.ts  keychainVault.ts
extension/src/killswitch/: killswitch.ts
extension/src/metrics/: clickTracker.ts  impressionTracker.ts
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/advertise/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/stats/: page.tsx
frontend/src/components/: FadeIn.tsx  SpinnerDemo.tsx
frontend/src/components/advertiser/: AdvertiseNav.tsx  AuctionPosition.tsx  CampaignCard.tsx  StatsChart.tsx
frontend/src/components/dashboard/: BalanceCard.tsx  DashboardNav.tsx  EarningsChart.tsx  PayoutForm.tsx
frontend/src/components/payment/: RazorpayButton.tsx  RazorpayPayoutSetup.tsx  WisePayoutSetup.tsx
frontend/src/lib/: api.ts  demoData.ts  utils.ts
frontend/src/store/: useAuthStore.ts
nginx/: nginx.conf
(+9 files in other folders)
