[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spinearn-backend"
version = "1.0.0"
description = "SpinEarn backend API - VS Code extension ad monetization platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.18",
    # Database
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    # Cache
    "redis==5.2.1",
    # Auth
    "python-jose[cryptography]==3.3.0",
    "authlib==1.3.2",
    "httpx==0.27.2",
    # Payments
    "razorpay==1.4.2",
    # Validation / settings
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    # Task queue
    "celery==5.4.0",
    "kombu==5.4.2",
    # Utilities
    "nanoid==2.0.0",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.27.2",
    "asgi-lifespan==2.1.0",
    "factory-boy==3.3.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-passlib==1.7.7.20260819",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "T20", # flake8-print
    "RUF", # ruff-specific
]
ignore = [
    "S101",  # assert in tests
    "S104",  # binding to 0.0.0.0
    "B008",  # function calls in default args (FastAPI Depends pattern)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"alembic/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*", "stripe.*", "authlib.*", "nanoid.*", "structlog.*", "tenacity.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["app"]
omit = ["app/tasks/*", "alembic/*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
